--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Kidz Shcool</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,500,700|Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.style.min.css">
   </head>
